<resources>
    <string name="app_name">Calculator4</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="delete">del</string>
    <string name="them_1">Them 1</string>
    <string name="them_2">Them 2</string>
</resources>