<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    >

    <TextView
        android:id="@+id/CountValue"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_columnSpan="3"
        android:layout_gravity="center"
        android:text="15"
        android:textColor="@color/white"
        android:textSize="25dp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:text="@string/_1"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:text="@string/_4"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:text="@string/_7"
       />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:text="@string/zero"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btndot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnsum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnsub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:text="@string/sub"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btndiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnmul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mul"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bteq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="75dp"
        android:text="="
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btndel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:text="@string/delete"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnthem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_marginLeft="75dp"
        android:text="@string/them_1"
        style="@style/CalcButtonStyle.NewStyle"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnthem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/them_2"
        style="@style/CalcButtonStyle.NewStyle"/>

</GridLayout>